--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -14,7 +14,7 @@
             android:icon="@drawable/ic_schedule"
             android:title="Calendars" />
         <item
-            android:id="@+id/nav_myEvents"
+            android:id="@+id/nav_createEvent"
             android:icon="@drawable/ic_friends"
             android:title="Create Event" />
     </group>
