--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:textColorHint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="50dp"
         app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />
     <EditText
         android:id="@+id/enterEmail"
@@ -41,6 +42,7 @@
         android:layout_marginTop="80dp"
         android:hint="Enter email"
         android:textColorHint="#000000"
+        android:layout_margin="50dp"
         app:layout_constraintTop_toBottomOf="@+id/enterUserNameMain"
         tools:layout_editor_absoluteX="1dp" />
 
@@ -51,6 +53,7 @@
         android:layout_marginTop="68dp"
         android:hint="Enter password"
         android:textColorHint="#000000"
+        android:layout_margin="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
